--- a/templates/all-packages.html
+++ b/templates/all-packages.html
@@ -9,6 +9,17 @@
       background-color: #eef6ff;
       padding: 40px;
     }
+    .app-footer {
+        max-width: 500px;
+        margin: 30px auto 10px;
+        text-align: center;
+    }
+    
+    .disclaimer {
+        font-size: 0.8rem;
+        color: #6c757d;
+        line-height: 1.4;
+    }
 
     .container {
       max-width: 1000px;
@@ -121,6 +132,7 @@
   </div>
 
 </div>
+{% include "footer.html" %}
 
 </body>
 </html>
