Add footer and disclaimer styles to FAQ page

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -39,6 +39,17 @@
       color: #333;
       margin: 0;
     }
+    .app-footer {
+        max-width: 500px;
+        margin: 30px auto 10px;
+        text-align: center;
+    }
+    
+    .disclaimer {
+        font-size: 0.8rem;
+        color: #6c757d;
+        line-height: 1.4;
+    }
 
     nav {
       position: sticky;
@@ -157,6 +168,7 @@
     <p>Click on "Find Agent" in the top menu to browse or connect with available agents near you.</p>
   </div>
 </div>
+{% include "footer.html" %}
 
 </body>
 </html>
