--- a/templates/register.html
+++ b/templates/register.html
@@ -10,6 +10,17 @@
             padding: 40px;
             text-align: center;
         }
+        .app-footer {
+            max-width: 500px;
+            margin: 30px auto 10px;
+            text-align: center;
+        }
+        
+        .disclaimer {
+            font-size: 0.8rem;
+            color: #6c757d;
+            line-height: 1.4;
+        }
         .container {
             background: white;
             padding: 30px;
@@ -57,6 +68,8 @@
             <p class="error-message">{{ error }}</p>
         {% endif %}
     </div>
+    {% include "footer.html" %}
+
 </body>
 </html>
 
